# osqueryi-mcp

./: .gitignore  GROUND-TRUTH.md  Makefile  PKG.md  PROJECT.md  README.md  TUNING.md  claude-plan.md  go.mod  models.txt  pyproject.toml  run_tests.sh
cmd/osqueryi-mcp/: executor.go  executor_test.go  main.go  main_test.go  tools.go
golang/: go.mod
golang/cmd/osqueryi-mcp/: executor.go  main.go  tools.go
refs/: PYTHON_MCP_CLIENT.md
rust/: Cargo.toml
rust/src/: config.rs  executor.rs  lock.rs  logging.rs  main.rs  tools.rs
tools/: agno_test_mcp.py  pydantic_ai_test_mcp.py  strands_test_mcp.py  test_mcp.py
