[project]
name = "osqueryi-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "agno>=2.7.4",
    "google-genai>=2.12.1",
    "openai>=2.46.0",
    "pydantic-ai>=2.13.0",
    "strands-agents>=1.48.0",
]

[tool.setuptools]
packages = []

