[package]
name = "osqueryi-mcp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "osquery-rs-mcp"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
nix = { version = "0.31.3", features = ["signal"] }
regex = "1.12.4"
rmcp = { version = "1.7.0", features = ["transport-io"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

